--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -9,7 +9,8 @@
       "remaining_free": "У тебя осталось {remaining} из {total} бесплатных сообщений на сегодня",
       "unlimited": "У тебя премиум подписка - безлимитное общение! 💎",
       "used_all": "Ты использовал все бесплатные сообщения на сегодня ({total}/{total})",
-      "reset_info": "Лимит обновится завтра в полночь",
+      "reset_info": "⏰ Лимит обновится завтра в полночь",
+      "premium_promo": "💎 Хотите общаться без ограничений? Купите премиум подписку!",
       "premium_days": "⏰ Премиум подписка истекает через {days} дн.",
       "premium_hours": "⏰ Премиум подписка истекает через {hours} ч.",
       "premium_expiring": "⏰ Премиум подписка истекает сегодня!"
@@ -53,7 +54,7 @@
     },
     "stop": {
       "confirmation": "🛑 <b>Остановка бота</b>\n\nВы уверены, что хотите остановить бота?\n\n<b>Все ваши данные будут удалены:</b>\n• История переписки\n• Настройки\n• Кэш\n\nЭто действие нельзя отменить!",
-      "success": "👋 <b>Бот остановлен</b>\n\nВсе данные удалены. До свидания!",
+      "success": "👋 <b>Бот остановлен</b>\n\nВсе данные удалены. До свидания!\n\n😢 Нам жаль, что вы уходите. Мы будем ждать вашего возвращения!",
       "cancelled": "❌ Остановка отменена",
       "already_stopped": "⚠️ <b>Бот уже остановлен</b>\n\nБот уже был остановлен. Вам не нужно останавливать его снова.\n\nЕсли хотите начать использовать бота, просто отправьте сообщение или используйте команду /start!"
     }
@@ -188,8 +189,8 @@
     "read_privacy": "Читать политику",
     "read_terms": "Читать соглашение",
     "read_disclaimer": "Читать отказ от ответственности",
-    "choose_female": "Выбрать девушку 😊",
-    "choose_male": "Выбрать молодого человека 😉",
+    "choose_female": "Девушка 😊",
+    "choose_male": "Молодой человек 😉",
     "female": "Девушка 😊",
     "male": "Молодой человек 😉",
     "buy_premium": "Купить премиум 💳",
