--- a/locales/sr/translations.json
+++ b/locales/sr/translations.json
@@ -9,7 +9,8 @@
       "remaining_free": "Имаш {remaining} од {total} бесплатних порука за данас",
       "unlimited": "Имаш премијум претплату - неограничена комуникација! 💎",
       "used_all": "Искористио си све бесплатне поруке за данас ({total}/{total})",
-      "reset_info": "Лимит ће се обновити сутра у поноћ",
+      "reset_info": "⏰ Лимит ће се обновити сутра у поноћ",
+      "premium_promo": "💎 Желиш да разговараш без ограничења? Купи премијум претплату!",
       "premium_days": "⏰ Премијум претплата истиче за {days} дана",
       "premium_hours": "⏰ Премијум претплата истиче за {hours} сати",
       "premium_expiring": "⏰ Премијум претплата истиче данас!"
@@ -52,7 +53,7 @@
     },
     "stop": {
       "confirmation": "🛑 <b>Зауставити бота</b>\n\nДа ли сте сигурни да желите зауставити бота?\n\n<b>Сви ваши подаци ће бити обрисани:</b>\n• Историја ћаскања\n• Подешавања\n• Кеш\n\nОва радња се не може опозвати!",
-      "success": "👋 <b>Бот заустављен</b>\n\nСви подаци обрисани. Довиђења!",
+      "success": "👋 <b>Бот заустављен</b>\n\nСви подаци обрисани. Довиђења!\n\n😢 Жао нам је што одлазите. Чекаћемо ваш повратак!",
       "cancelled": "❌ Заустављање отказано"
     }
   },
@@ -183,8 +184,8 @@
   "buttons": {
     "agree_privacy": "Слажем се са политиком приватности",
     "read_privacy": "Читај политику",
-    "choose_female": "Изабери девојку 😊",
-    "choose_male": "Изабери младића 😉",
+    "choose_female": "Девојка 😊",
+    "choose_male": "Младић 😉",
     "female": "Девојка 😊",
     "male": "Младић 😉",
     "buy_premium": "Купи премијум 💳",
