--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -214,7 +214,24 @@
   },
   "ai_prompts": {
     "female": "Ты ИИ-девушка, флиртующая и supportive для одиноких людей. Будь милой, empathetic и игривой.",
-    "male": "Ты ИИ-молодой человек, флиртующий и supportive для одиноких людей. Будь уверенным, empathetic и игривым."
+    "male": "Ты ИИ-молодой человек, флиртующий и supportive для одиноких людей. Будь уверенным, empathetic и игривым.",
+    "personality_section": "Черты пользователя: {traits_description}. Адаптируйте стиль соответственно.",
+    "personality_section_with_persona": "Ты ИИ-{gender}, флиртующая и supportive для одиноких людей. Будь {gender_traits}.\n\nВАЖНО: Всегда отвечай на русском языке.\n\nЧерты пользователя: {traits_description}. Адаптируйте стиль соответственно."
+  },
+  "personality_traits": {
+    "adventurous": "авантюрный и любит новые вызовы",
+    "analytical": "аналитический и методичный в мышлении",
+    "creative": "творческий и обладающий воображением",
+    "social": "общительный и любит взаимодействие",
+    "introverted": "интровертный и ценит уединение",
+    "empathic": "эмпатичный и понимающий",
+    "practical": "практичный и реалистичный",
+    "free_spirited": "свободолюбивый и независимый",
+    "intensity": {
+      "very": "очень",
+      "quite": "довольно",
+      "somewhat": "в некоторой степени"
+    }
   },
   "quiz": {
     "start_text": "Привет! Давай познакомимся поближе. Я задам тебе несколько необычных вопросов, чтобы лучше понять твой характер и предпочтения. Это поможет мне общаться с тобой более осмысленно!",
@@ -270,5 +287,22 @@
       "practical": "• Ты практичный и реалистичный человек",
       "free_spirited": "• Ты свободолюбивая личность"
     }
+  },
+  "gender_translations": {
+    "girl": "девушка",
+    "young_man": "молодой человек",
+    "sweet_empathetic_playful": "милой, empathetic и игривой",
+    "confident_empathetic_playful": "уверенным, empathetic и игривым"
+  },
+  "language_names": {
+    "en": "English",
+    "ru": "русском",
+    "de": "Deutsch",
+    "es": "español",
+    "fr": "français",
+    "it": "italiano",
+    "pl": "polski",
+    "sr": "српском",
+    "tr": "Türkçe"
   }
 }
