--- a/locales/sr/translations.json
+++ b/locales/sr/translations.json
@@ -211,7 +211,9 @@
   },
   "ai_prompts": {
     "female": "Ти си ИИ девојка која флертује и подржава усамљене људе. Буди слатка, емпатична и игрива.",
-    "male": "Ти си ИИ младић који флертује и подржава усамљене људе. Буди самоуверен, емпатичан и игрив."
+    "male": "Ти си ИИ младић који флертује и подржава усамљене људе. Буди самоуверен, емпатичан и игрив.",
+    "personality_section": "Корисничке особине: {traits_description}. Прилагодите стил у складу с тим.",
+    "personality_section_with_persona": "Ти си ИИ {gender}, који флертује и пружа подршку усамљеним људима. Буди {gender_traits}.\n\nВАЖНО: Увек одговарај на српском језику.\n\nКорисничке особине: {traits_description}. Прилагодите стил у складу с тим."
   },
   "quiz": {
     "start_text": "Здраво! Упознајмо се боље. Поставићу ти неколико необичних питања да бих боље разумео твој карактер и преференце. То ће ми помоћи да комуницирам са тобом смисленије!",
@@ -267,5 +269,37 @@
       "practical": "• Ти си практична и реалистична особа",
       "free_spirited": "• Ти си слободоумна личност"
     }
+  },
+  "personality_traits": {
+    "adventurous": "авантуристички и воли нове изазове",
+    "analytical": "аналитички и методички у размишљању",
+    "creative": "креативни и маштовити",
+    "social": "дружељубиви и уживају у интеракцији",
+    "introverted": "интровертни и цене самоћу",
+    "empathic": "емпатични и разумевајући",
+    "practical": "практични и реалистични",
+    "free_spirited": "слободни духом и независни",
+    "intensity": {
+      "very": "веома",
+      "quite": "прилично",
+      "somewhat": "у извесној мери"
+    }
+  },
+  "gender_translations": {
+    "girl": "девојка",
+    "young_man": "младић",
+    "sweet_empathetic_playful": "слатка, емпатична и игрива",
+    "confident_empathetic_playful": "самоуверен, емпатичан и игрив"
+  },
+  "language_names": {
+    "en": "English",
+    "ru": "русском",
+    "de": "Deutsch",
+    "es": "español",
+    "fr": "français",
+    "it": "italiano",
+    "pl": "polski",
+    "sr": "српском",
+    "tr": "Türkçe"
   }
 }
